--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+version = v1.0.0
 
+voucherapp.version = v1.0.0
+
+voucherapp.support-vendors = a, b, c, d, e, f, g
+
+voucherapp.minimum-order-amount = 1
