--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,14 @@
-# kdt.version
+servers:
+  - dev.bar.com
+  - foo.bar.com
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: local
+
 kdt:
   version: "v1.0"
   minimum-order-amount: 1
@@ -11,3 +21,23 @@ kdt:
     line 1 hello world
     line 2 xxxx
     line 3
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+kdt:
+  version: "v1.0"
+  minimum-order-amount: 1
+  support-vendors:
+    - dev - a
+    - dev - b
+  description: |- # - 기호가 있으면 줄바꿈 포함하지 않음
+    line 1 dev
+    line 2 dev
+    line 3 dev
+
+---
